--- a/Areas/Admin/Views/Category/Delete.cshtml
+++ b/Areas/Admin/Views/Category/Delete.cshtml
@@ -27,6 +27,10 @@
             <div class="form-group">
                 <input type="submit" value="Delete" class="btn btn-primary" />
             </div>
+            <div class="col-6 col-md-3">
+                <a asp-controller="Category" asp-action="Index" class="btn form-control btn-outline-secondary">Back to list</a>
+
+            </div>
         </form>
     </div>
 </div>
