--- a/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using BulkyWeb
 @using Bulky.Models
+@using Bulky.Utility
+@using Bulky.DataAccess.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
